welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:1: error: Missing closing brace `}' assumed here
override def run() {
^Diagonal:1: error: expected start of definition
override def run() {
         ^Diagonal:34: error: Missing closing brace `}' assumed here
	}while (!(getX==getMondeLargeur()-1 && getY==getMondeHauteur()-1))
        ^